--- a/index.html
+++ b/index.html
@@ -88,12 +88,6 @@
                                 <span class="type">Poop</span>
                             </label>
                         </div>
-                        <!-- <div class="input-field col s2">
-                            <a href="#" class="waves-effect waves-light btn orange update-btn">Update Item <i class="material-icons right">mode_edit</i></a>
-                        </div>
-                        <div class="input-field col s2">
-                            <a href="#" class="waves-effect waves-light btn red delete-btn">Delete Item <i class="material-icons right">delete</i></a>
-                        </div> -->
                         <div class="input-field col s4">
                             <a href="#" class="waves-effect waves-light btn blue reset">Reset  <i class="material-icons right">clear_all</i></a>
                         </div>
@@ -122,8 +116,8 @@
                         <tbody class="feedOutput">
 
                         </tbody>
-                        <tfoot>
-                            <tr>
+                        <tfoot class="footerContent">
+                            <!-- <tr>
                                 <td><strong>Daily Totals</strong></td>
                                 <td></td>
                                 <td>12oz or 360ml</td>
@@ -131,26 +125,12 @@
                                 <td>4x💦</td>
                                 <td>2x💩</td>      
                                 <td></td>              
-                            </tr>
+                            </tr> -->
                         </tfoot>
                     </table>
                 </div>
             </div>
         </div>
-        <!-- <div class="card">
-            <div class="card-content">
-                <table>
-                    <thead>
-                        <h4>Hello World</h4>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>hello</td>
-                            <td>world</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div> -->
         </div>
     </div>  <!-- end container -->
 
