tweaked responsiveness on inputs

--- a/index.html
+++ b/index.html
@@ -36,42 +36,27 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s12 m4 l2">
+                        <div class="input-field col s12 m3 l2">
                             <label for="formula">
                                 <input type="checkbox" id="formula"/>
                                 <span>🍼</span>
                                 <span class="type">Formula</span>
                             </label>
                         </div>
-                        <div class="input-field col s12 m4 l2">
+                        <div class="input-field col s12 m3 l4">
                             <input type="number" min="0" step="0.01" id="formulaAmt">
-                            <label for="formulaAmt">Amount</label>
+                            <label for="formulaAmt">Amount</label> Ounces
                         </div>
-                        <div class="input-field col s12 m4 l2">
-                            <!-- <select for="formulaMeasurement" id="formulaMeasure">
-                                <option value="oz" id="bottleOz">Ounces</option>
-                                <option value="ml" id="bottleMl">Milliliters</option>
-                            </select> -->
-                            <label>Ounces</label>
-                        </div>
-                        <div class="input-field col s12 m4 l2">
+                        <div class="input-field col s12 m3 l2">
                             <label for="breast">
                                 <input type="checkbox" id="breast"/>
                                 <span>( . Y . )</span>
                                 <span class="type">Breast Milk</span>
                             </label>
                         </div>
-                        <div class="input-field col s12 m4 l2">
+                        <div class="input-field col s12 m3 l4">
                             <input type="number" min="0" step="0.01" id="breastAmt">
-                            <label for="breastAmt">Amount</label>
-                        </div>
-                        <div class="input-field col s12 m4 l2">
-                            
-                            <!-- <select for="breastMeasurement" id="breastMeasure">
-                                <option value="oz" id="breastOz">Ounces</option>
-                                <option value="ml" id="breastMl">Milliliters</option>
-                            </select> -->
-                            <label>Ounces</label>
+                            <label for="breastAmt">Amount</label> Ounces
                         </div>
                     </div>
                     <div class="row">
