--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav-wrapper">
             <a href="#" class="brand-logo center">Baby Trackr</a>
             <ul id="nav-mobile" class="right">
-                <li><a href="#" class="waves-effect waves-light btn red lighten-3 clear-btn"><i class="material-icons right">delete_forever</i><span class="hide-on-med-and-down">Clear All</span></a></li>
+                <li><a href="#" class="waves-effect waves-light btn red lighten-3 clear-btn"><i class="material-icons right">delete_forever</i><span class="hide-on-small-only">Clear All</span></a></li>
             </ul>
         </div>
     </nav>
